# TimeSeries

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  lgtm.yml  meson.build
include/: TimeSeries.h  ts_arithmetic.h  ts_iterator_indexes.h  ts_iterator_value.h  ts_iterators.h  ts_time.h
subprojects/: benchmark.wrap
tests/GenericTS/: main.cpp
tests/STL_ALGS/: main.cpp
tests/SimpleScalar/: main.cpp
tests/TSIteratorValues/: main.cpp
tests/TSIterators/: main.cpp
tests/TimeSerieND/: main.cpp
tests/benchmarks/: main.cpp
